Fix all import issues: Excel file parsing, currency symbols, line breaks, and data validation
- Fix Excel file (.xlsx/.xls) import issues with line breaks and currency symbols
- Remove currency symbols (, $, , , ) from imported data automatically
- Handle line breaks within Excel cells by converting to spaces
- Fix invoice number extraction with comprehensive header mapping
- Improve CSV parsing to handle both standard CSV and multi-line formats
- Add robust date validation to prevent invalid dates (1900-2100 range)
- Fix quote removal from customer names and other text fields
- Enhance error handling and user feedback with detailed console logging
- Fix ESLint/TypeScript compilation errors and accessibility issues
- Add comprehensive field mapping for various header name variations
- Improve duplicate detection based on invoice numbers
- Fix frontend display formatting and currency symbol handling
- Add regex dependency for enhanced date parsing in Rust backend
- Update both frontend (TypeScript) and backend (Rust) parsing logic
- Add sample data files and comprehensive documentation

All import issues resolved:
 Currency symbols removed from numbers
 Line breaks normalized in text fields
 Invoice numbers properly extracted
 Dates validated and formatted correctly
 Customer names cleaned (no quotes)
 Duplicate entries prevented
 Excel file format fully supported

--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
+  "scripts": {
+    "dev": "cd sale-report-app && npm run dev"
+  },
   "dependencies": {
-    "@tauri-apps/api": "^2.8.0"
+    "@tauri-apps/api": "^2.8.0",
+    "xlsx": "^0.18.5"
   }
 }
