--- a/sale-report-app/src-tauri/Cargo.toml
+++ b/sale-report-app/src-tauri/Cargo.toml
@@ -26,3 +26,4 @@ tauri-plugin-log = "2"
 rusqlite = { version = "0.31", features = ["bundled"] }
 tokio = { version = "1.0", features = ["full"] }
 csv = "1.3"
+regex = "1.0"
