--- a/sale-report-app/src-tauri/Cargo.toml
+++ b/sale-report-app/src-tauri/Cargo.toml
@@ -27,3 +27,6 @@ rusqlite = { version = "0.31", features = ["bundled"] }
 tokio = { version = "1.0", features = ["full"] }
 csv = "1.3"
 regex = "1.0"
+
+[dev-dependencies]
+tempfile = "3.0"
