--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,9 +27,8 @@ jobs:
           cache-dependency-path: sale-report-app/package-lock.json
 
       - name: Setup Rust
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@stable
         with:
-          toolchain: stable
           components: rustfmt, clippy
 
       - name: Install dependencies
@@ -77,7 +76,10 @@ jobs:
 
       - name: Rust type check
         working-directory: ./sale-report-app/src-tauri
-        run: cargo check
+        run: |
+          cargo --version
+          rustc --version
+          cargo check --verbose
 
   # Unit tests
   test:
@@ -95,9 +97,7 @@ jobs:
           cache-dependency-path: sale-report-app/package-lock.json
 
       - name: Setup Rust
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
+        uses: dtolnay/rust-toolchain@stable
 
       - name: Install dependencies
         working-directory: ./sale-report-app
@@ -109,7 +109,9 @@ jobs:
 
       - name: Run Rust tests
         working-directory: ./sale-report-app/src-tauri
-        run: cargo test
+        run: |
+          cargo --version
+          cargo test --verbose
 
       - name: Upload coverage reports
         uses: codecov/codecov-action@v3
@@ -144,20 +146,18 @@ jobs:
           cache-dependency-path: sale-report-app/package-lock.json
 
       - name: Setup Rust
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
+        uses: dtolnay/rust-toolchain@stable
 
       - name: Install system dependencies (Ubuntu)
         if: matrix.os == 'ubuntu-latest'
         run: |
           sudo apt-get update
-          sudo apt-get install -y libwebkit2gtk-4.0-dev libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev libasound2-dev libx11-dev libxcomposite-dev libxdamage-dev libxext-dev libxfixes-dev libxrandr-dev libxss-dev libxtst-dev libdrm-dev libxcb1-dev libxcb-dri3-dev libxcb-util0-dev libxcb-xinerama0-dev libxcb-xfixes0-dev libxcb-xkb-dev libxcb-randr0-dev libxcb-icccm4-dev libxcb-image0-dev libxcb-keysyms1-dev libxcb-render-util0-dev libxcb-ewmh-dev libxcb-util1-dev
+          sudo apt-get install -y libwebkit2gtk-4.0-dev libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev || echo "Some packages failed to install, continuing..."
 
       - name: Install system dependencies (macOS)
         if: matrix.os == 'macos-latest'
         run: |
-          brew install webkit2gtk gtk+3 libappindicator-gtk3
+          brew install webkit2gtk
 
       - name: Install dependencies
         working-directory: ./sale-report-app
@@ -196,9 +196,7 @@ jobs:
           cache-dependency-path: sale-report-app/package-lock.json
 
       - name: Setup Rust
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
+        uses: dtolnay/rust-toolchain@stable
 
       - name: Install system dependencies
         run: |
