refactor: Optimize workflows for Windows-only package
- Remove macOS and Ubuntu builds from CI/CD pipeline
- Update all workflows to run on Windows only
- Simplify system dependencies (no Linux/macOS deps needed)
- Update artifact names to reflect Windows-only builds
- Optimize E2E tests for Windows environment
- Update security and accessibility workflows for Windows
- Streamline Docker workflow for Windows containers

--- a/.github/workflows/accessibility.yml
+++ b/.github/workflows/accessibility.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   accessibility-test:
     name: Accessibility Tests
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     
     steps:
       - name: Checkout code
@@ -23,14 +23,8 @@ jobs:
           cache-dependency-path: sale-report-app/package-lock.json
 
       - name: Setup Rust
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
+        uses: dtolnay/rust-toolchain@stable
 
-      - name: Install system dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libwebkit2gtk-4.0-dev libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
 
       - name: Install dependencies
         working-directory: ./sale-report-app
