--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -119,20 +119,10 @@ jobs:
           directory: ./sale-report-app/coverage
           fail_ci_if_error: false
 
-  # Build and test
+  # Windows build and test
   build:
-    name: Build & Test
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-        include:
-          - os: ubuntu-latest
-            platform: linux
-          - os: windows-latest
-            platform: win32
-          - os: macos-latest
-            platform: darwin
+    name: Build & Test (Windows)
+    runs-on: windows-latest
 
     steps:
       - name: Checkout code
@@ -148,16 +138,6 @@ jobs:
       - name: Setup Rust
         uses: dtolnay/rust-toolchain@stable
 
-      - name: Install system dependencies (Ubuntu)
-        if: matrix.os == 'ubuntu-latest'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libwebkit2gtk-4.0-dev libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev || echo "Some packages failed to install, continuing..."
-
-      - name: Install system dependencies (macOS)
-        if: matrix.os == 'macos-latest'
-        run: |
-          brew install webkit2gtk
 
       - name: Install dependencies
         working-directory: ./sale-report-app
@@ -174,7 +154,7 @@ jobs:
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: tauri-app-${{ matrix.platform }}
+          name: tauri-app-windows
           path: |
             sale-report-app/src-tauri/target/release/bundle/
           retention-days: 7
@@ -182,8 +162,8 @@ jobs:
   # E2E tests
   e2e:
     name: E2E Tests
-    runs-on: ubuntu-latest
-    needs: [lint, type-check, test]
+    runs-on: windows-latest
+    needs: [build]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -198,10 +178,6 @@ jobs:
       - name: Setup Rust
         uses: dtolnay/rust-toolchain@stable
 
-      - name: Install system dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libwebkit2gtk-4.0-dev libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
 
       - name: Install dependencies
         working-directory: ./sale-report-app
