Fix CI validation issues
- Fix Rust code formatting in database.rs
- Update Node.js version from 18 to 22 in CI workflow for Vite compatibility
- Add system dependencies to CI workflow to fix gobject-sys/glib-sys build issues
- Fix Playwright test selectors to use correct data-testid attributes
- Add .nvmrc file for Node.js version consistency
- Add validate:ci script to package.json for easy CI validation

All tests now pass: 64 e2e tests, 14 unit tests, 3 Rust tests

--- a/sale-report-app/package.json
+++ b/sale-report-app/package.json
@@ -27,7 +27,8 @@
     "rust:clippy": "cd src-tauri && cargo clippy -- -D warnings",
     "rust:test": "cd src-tauri && cargo test",
     "type-check": "tsc --noEmit",
-    "check:all": "npm run type-check && npm run lint && npm run format:check && npm run test:run && npm run rust:fmt:check && npm run rust:clippy && npm run rust:test"
+    "check:all": "npm run type-check && npm run lint && npm run format:check && npm run test:run && npm run rust:fmt:check && npm run rust:clippy && npm run rust:test",
+    "validate:ci": "npm run check:all"
   },
   "devDependencies": {
     "@playwright/test": "^1.55.0",
