--- a/sale-report-app/.github/workflows/code-quality.yml
+++ b/sale-report-app/.github/workflows/code-quality.yml
@@ -1,5 +1,10 @@
 name: Code Quality
 
+env:
+  # Disable Linux-specific system libraries on Windows
+  PKG_CONFIG_PATH: ""
+  PKG_CONFIG_ALLOW_SYSTEM_CFLAGS: "0"
+
 on:
   pull_request:
     types: [opened, synchronize, reopened]
@@ -20,7 +25,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '22'
+          node-version: '20'
           cache: 'npm'
           cache-dependency-path: sale-report-app/package-lock.json
 
@@ -86,7 +91,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '22'
+          node-version: '20'
           cache: 'npm'
           cache-dependency-path: sale-report-app/package-lock.json
 
